---
source: src/tests/modules.rs
expression: "&snapshot"
---
--- Input ---
mod
---

Some(
    Spanned(
        Module {
            name: None,
            items: [],
        },
        0..3,
    ),
)

--- Errors ---
[
    ParseError {
        span: 1..3,
        reason: ExpectedFound {
            expected: [
                Semi,
                OpenBrace,
            ],
            found: None,
        },
    },
]
---
